--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "meraz19-site",
+	"name": "meraz-site",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -10,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@fontsource/metal-mania": "^4.5.0",
+		"@fontsource/press-start-2p": "^4.5.11",
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.69",
